update with milestone

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     </div>
 
     <div id="fullscreen-gif-overlay">
-  <img src="celebrate.gif" alt="Scanned!" />
-</div>
+      <img src="celebrate.gif" alt="Scanned!" />
+    </div>
+
+    <div id="milestone-gif-overlay">
+      <img src="milestone.gif" alt="Milestone!" />
+    </div>
 
     <p id="status">Scanned 0 of 14 QR codes</p>
     <ul id="scanned-list"></ul>
